--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th <%= link_to movies_path(:sort_by=>'release date'),  :id=>"release_date_header", {:class => "hilite" if @sort_column == "release_date"} %>
+      %th <%= link_to movies_path(:sort_by=>'release date')># => <a href="/">Movie Title</a>,  :id=>"release_date_header", {:class => "hilite" if @sort_column == "release_date"} %>
       %th Rating
       %th {:class=>("hilite" if @sort_column == "release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date'), :id=>"release_date_header"
       %th More Info
