--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,7 +6,7 @@
     %tr
       %th= link_to "Movie Title", movies_path(:sort_by=>'release date')
       %th Rating
-      %th {:class=>("hilite" if @sort_column == "release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date'), :id=>"release_date_header"
+      %th= link_to "Release Date", movies_path(:sort_by=>'release_date')
       %th More Info
   %tbody
     - @movies.each do |movie|
