--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th{:id => 'title_header', :class => checking('title')}= link_to "Movie Title", movies_path(:sort_by=>'title')
+      %th{:id => 'title_header', :class => helper_checking('title')}= link_to "Movie Title", movies_path(:sort_by=>'title')
       %th Rating
-      %th{:id => 'release_date_header', :class => checking('release_date')}= link_to "Release Date", movies_path(:sort_by=>'release_date')
+      %th{:id => 'release_date_header', :class => helper_checking('release_date')}= link_to "Release Date", movies_path(:sort_by=>'release_date')
       %th More Info
   %tbody
     - @movies.each do |movie|
