--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th{:id => 'title_header', :class => 'hilite'}= link_to "Movie Title", movies_path(:sort_by=>'title')
+      %th{:id => 'title_header', :class => (@sort_column == 'title') ? 'hilite':nil}= link_to "Movie Title", movies_path(:sort_by=>'title')
       %th Rating
-      %th{:id => 'release_date_header', :class => 'hilite'}= link_to "Release Date", movies_path(:sort_by=>'release_date')
+      %th{:id => 'release_date_header', :class => (@sort_column == 'release_date') ? 'hilite':nil}= link_to "Release Date", movies_path(:sort_by=>'release_date')
       %th More Info
   %tbody
     - @movies.each do |movie|
