--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", (true if @set_ratings[rating])
+    = check_box_tag "ratings[#{rating}]", 1, (true if @set_ratings[rating])
   = submit_tag 'Refresh'
 
 %table#movies
