--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th{:id => 'title_header', :class => (@sort_by == 'title') ? 'hilite':nil}= link_to "Movie Title", movies_path(:sort_by=>'title', :ratings=>@set_ratings)
+      %th{:id => 'title_header', :class => (@sort_column == 'title') ? 'hilite':nil}= link_to "Movie Title", movies_path(:sort_by=>'title', :ratings=>@set_ratings)
       %th Rating
-      %th{:id => 'release_date_header', :class => (@sort_by == 'release_date') ? 'hilite':nil}= link_to "Release Date", movies_path(:sort_by=>'release_date', :ratings=>@set_ratings)
+      %th{:id => 'release_date_header', :class => (@sort_column == 'release_date') ? 'hilite':nil}= link_to "Release Date", movies_path(:sort_by=>'release_date', :ratings=>@set_ratings)
       %th More Info
   %tbody
     - @movies.each do |movie|
